--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,11 @@
 
 /* header */
 
+header .row {
+    height: 70px;
+    align-items: center;
+    justify-content: center;
+}
 
 .searchbar {
     flex-grow: 1;
@@ -21,8 +26,31 @@
 }
 
 
+/* main */
 
+aside {
+    width: 70px;
+    height: 100vh;
+}
 
+.aside_bar {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.settings {
+    margin-top: auto;
+}
+
+@media (min-width: 992px) {
+
+    aside {
+        width: 140px;
+    }
+}
 
 
 
@@ -63,3 +91,13 @@
 .debug header {
     background-color: rgb(97, 97, 246);
 }
+
+.debug .row {
+    border: 2px dotted red;
+}
+
+
+.debug aside {
+    background-color: rgb(122, 246, 97);
+}
+
