ADD: card section responsive layout and card faq content

--- a/css/style.css
+++ b/css/style.css
@@ -133,9 +133,9 @@ aside {
 
 
 
-.debug .card {
+/* .debug .card {
     background-color: rgba(244, 17, 17, 0.463);
     border: 2px solid black;
     height: fit-content;
 
-}
+} */
