--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,13 @@
 /* style */
 .link_list {
     list-style: none;
-
+    padding: 0;
+    margin: 0;
 }
 
+#app {
+    background-color: #FEFEFE;
+}
 
 
 
@@ -20,37 +24,59 @@
 }
 
 .main_app {
-    width: calc(100% - 70px);
-
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
 }
-
-@media (min-width:992px) {
-    .main_app {
-        width: calc(100% - 140px);
-    }
-}
-
 
 
 /* header */
 
-header .row {
+header {
     height: 70px;
-    align-items: center;
-    justify-content: center;
+    background-color: #FEFEFE;
+}
+
+header > * {
+    background-color: white;
 }
 
 .searchbar {
     flex-grow: 1;
+    position: relative;
+}
+
+.searchbar input {
+	height: 42px;
+	background-color: #e5e5e5;
+	border-radius: 10px;
+	width: 100%;
+	border: none;
+	padding-left: 42px;
+}
+
+.searchbar .search-bar__icon {
+	position: absolute;
+	top: 50%;
+	left: 16px;
+	transform: translateY(-50%);
+	pointer-events: none;
+}
+
+.logo_mobile {
+    width: 50px;
+}
+
+.link_list a {
+    color: black;
+    text-decoration: none;
+
 }
 
 
-
-.link {
-    display: flex;
-    gap: 8px;
+.bell_button {
+    color: #FF8F00;
 }
-
 
 /* main */
 
@@ -67,6 +93,7 @@ aside {
 
 }
 
+
 .settings {
     margin-top: auto;
 }
@@ -81,9 +108,7 @@ aside {
 /* main header */
 
 .main_header {
-    flex-grow: 1;
     width: 100%;
-    height: fit-content;
 }
 
 
@@ -106,21 +131,13 @@ aside {
 
 
 /* DEBUG */
-.debug .searchbar {
+/* .debug .searchbar {
     border: 2px dotted black;
-}
+} */
 
-.debug .logo {
-    border: 2px dotted black;
-}
-
-.debug .link {
-    border: 2px dotted black;
-}
-
-.debug header {
+/* .debug header {
     background-color: rgb(97, 97, 246);
-}
+} */
 
 .debug .row {
     border: 2px dotted red;
