--- a/css/style.css
+++ b/css/style.css
@@ -119,9 +119,26 @@ aside a {
 
 .main_header {
     width: 100%;
+    background-color: #1B72E8;
+    color: white;
 }
 
+.main_header li,
+.main_header span {
+    font-size: 8px;
+}
 
+.main_badge {
+    background-color: #165BBA;
+  border-radius: 999px;
+  padding: 1px 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+  height: fit-content;
+  
+}
 
 
 
@@ -158,9 +175,9 @@ aside a {
     background-color: rgb(122, 246, 97);
 } */
 
-.debug .main_header {
+/* .debug .main_header {
     background-color: rgb(218, 244, 17);
-}
+} */
 
 
 
