--- a/css/style.css
+++ b/css/style.css
@@ -8,26 +8,35 @@
 
 #app {
     background-color: #FEFEFE;
+    width: 100%;
+    height: 100vh;
 }
 
 
 
 /* layoyt */
 
+
 .app_content {
     width: 100%;
     height: 100%;
+    overflow: hidden;
+    
 }
 
 .app_wrapper {
     display: flex;
+    overflow: hidden;
 }
 
 .main_app {
+    height: calc(100vh - 70px);
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    overflow: auto;
 }
+
 
 
 /* header */
@@ -67,7 +76,7 @@ header > * {
     width: 50px;
 }
 
-.header a {
+header a {
     color: black;
     text-decoration: none;
 
@@ -130,27 +139,67 @@ aside a {
 
 .main_badge {
     background-color: #165BBA;
-  border-radius: 999px;
-  padding: 1px 4px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: fit-content;
-  height: fit-content;
-  
+    border-radius: 999px;
+    padding: 1px 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: fit-content;
+    height: fit-content;
+    
 }
 
 
 
 
 
+/* main cards section */
 
+.avatar {
+    width: 30px;
+}
 
+.table_badge {
+    font-size: 12px;
+    color: white;
+    border-radius: 8px;
+    padding: 2px 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: fit-content;
+}
 
+.done {
+    background-color: #198754;
+}
 
+.process {
+    background-color: #FFC107;
+}
 
+.failed {
+    background-color: #DC3545;
+}
 
+.table_action {
+    color: #6C757D;
+    border: 1px solid #6C757D;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2px 8px;
+    border-radius: 4px;
+}
 
+.table_action a {
+    font-style: none;
+    color: currentColor;
+}
+
+thead {
+    font-weight: 200;
+}
 
 
 
