--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@
     display: flex;
     flex-direction: column;
     overflow: auto;
+    background-color: #F8F9FA;
 }
 
 
@@ -125,6 +126,7 @@ aside a {
 
 .settings {
     margin-top: auto;
+    margin-bottom: 20px;
 }
 
 @media (min-width: 992px) {
